# RHInfraAssistant

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py  report.doc
docker-compose-setup/: compose.yaml
src/telco_cloud_assist_crew/: crew.py  main.py
src/telco_cloud_assist_crew/config/: agents.yaml  tasks.yaml
src/telco_cloud_assist_crew/tools/: custom_tool.py
test_notebooks/: knowledge_creation.ipynb
test_notebooks/RH_Docs/: OCP 4.14 LLD -v2.docx.docx  OCP-LLD.docx
